Añadiendo párrafo al index de la rama feature cgr05

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Released: 4.3.13
     <div class="mainContent">
     	<h1>Welcome</h1>
         <p>
-        	CGR05 Lane-Fox is founder and CEO of Doteveryone.one.org.uk, an independent think tank and charity that advocates for responsible technology for a fairer future.
+        	CGR05 Texto para el examen del día 20 de dicembre.
         </p>
         <p><img src="images/pic.jpg" alt="pic" class="picStyle"></p>
         <p>
