--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Released: 4.3.13
     <div class="mainContent">
     	<h1>Welcome</h1>
         <p>
-        	CGR05 Texto para el examen del día 20 de dicembre.
+        	CGR05 Prueba para generar un conflicto en el examen desde feature.
         </p>
         <p><img src="images/pic.jpg" alt="pic" class="picStyle"></p>
         <p>
